# virtualGizmo3D

./: .gitattributes  README.md  readme.md  virtualGizmo.h
easy_examples/commons/: mVeryMinimal.html  shadersAndModel.h
easy_examples/cube_OpenGL/: CMakeLists.txt  oglCubeOrtho_06.cpp  oglCube_06.cpp  oglCube_06_SDL.cpp  oglCube_06_callbacks.cpp
easy_examples/cube_OpenGL/emscripten/: CMakeLists.txt  wglCube_EMS.cpp
easy_examples/cube_Vulkan/: CMakeLists.txt  framework.cpp  framework.h  readme.md  vkCube.cpp  vkCube.h
easy_examples/cube_WGPU/: CMakeLists.txt  README.md  main.cpp  main_js_inline.cpp
example/: CMakeLists.txt
example/Shaders/: oglAxesFrag.glsl
example/src/: glApp.cpp  glApp.h  glWindow.cpp  glWindow.h  mVeryMinimal.html  very_minimal_qjSet.html
example/src/tools/: oglAxes.cpp  oglAxes.h
example/src/vs2017/: oglApp.vcxproj  oglApp.vcxproj.filters
examples/OpenGL/glLightCube/: CMakeLists.txt  oglCube.h  oglCube_06_callbacks.cpp
examples/OpenGL/glLightCube/emscripten/: CMakeLists.txt  oglCube.h  wglCube_EMS.cpp
examples/Vulkan/commons/: framework.cpp
examples/Vulkan/vkLightCube/: CMakeLists.txt
oglGizmo.example/Shaders/: oglAxesFrag.glsl  oglAxesVert.glsl
oglGizmo.example/emsOut/MinSizeRel/: oglGizmo.html
oglGizmo.example/src/: glApp.cpp  glApp.h  glWindow.cpp  glWindow.h
oglGizmo.example/src/tools/: glslProgramObject.cpp  glslProgramObject.h  glslShaderObject.cpp  glslShaderObject.h  imGuIZMO.cpp  imGuIZMO.h  imguiControls.cpp  imguiControls.h  oglAxes.cpp  oglAxes.h  transforms.h  virtualGizmo.h
oglGizmo.example/src/vs2017/: oglApp.vcxproj
oglGizmo_example/: CMakeLists.txt  emsCMakeGen.cmd
oglGizmo_example/src/: glWindow.cpp  glWindow.h  mVeryMinimal.html
oglGizmo_example/src/vs2017/: oglApp.vcxproj
vGizmo3D/: vGizmo.h
virtualGizmo3D/: vGizmoConfig.h
